# projeto-compvision

./: README.md  compare_images_to_canny.py  compare_images_tranformacoes.py  dilate_variations.py  main.py  novo.py  oai.py  pyproject.toml  slides.md  tabela_com_imagens.html  tabela_transformacoes.html  transf.py
tabelas_comparacoes/: compare_images_to_canny.py
teste_estatistico/: generate_variations_evaluate.py  graficos.py  graficos_all_images.py  graficos_enzo_rafael.py  graphs_all_images.py  lowest_mean.py  teste_estatistico.py  teste_estatistico_all_images.py  transformation_results.txt  transformation_results2.txt  transformation_results_enzo_estrela.txt  transformation_results_rafael_estrela.txt  ttest.py
teste_estatistico/base_case/: base_case.py
teste_estatistico/base_case/transformation_results/: similarities_canny_cavalo.txt  similarities_canny_estrela.txt  similarities_canny_gato.txt  similarities_canny_linus.txt  similarities_canny_luminaria.txt  similarities_canny_mack.txt  similarities_canny_nike.txt  similarities_canny_raposa.txt
teste_estatistico/transformation_results/: transformation_results_bruno_estrela.txt  transformation_results_bruno_mack.txt  transformation_results_marcelo_mack.txt  transformation_results_rafael_mack.txt
teste_estatistico/transformation_results/cavalo/: transformation_results_bruno_cavalo.txt  transformation_results_enzo_cavalo.txt  transformation_results_marcelo_cavalo.txt  transformation_results_rafael_cavalo.txt
utils/: base_comparisson.py  transform_to_canny.py
(+22 files in other folders)
