[project]
name = "projeto-compvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "opencv-python>=4.11.0.86",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
