[project]
name = "projeto-compvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "openai>=1.76.0",
    "opencv-python>=4.11.0.86",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
